Fix low contrast on the active menu toggle button

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -28,6 +28,7 @@
 
 // Menu toggle button
 // -------------------------
+
 .toggle-button( @bg-color: @gray, @bg-secondary-color: darken( @gray, 6% ) ) {
 	background-color: @bg-secondary-color;
 	background-image: linear-gradient(to bottom, @bg-color, @bg-secondary-color);
@@ -55,6 +56,7 @@
 	&:active,
 	&:focus {
 		background: @gray-darker;
+		color: #fff;
 	}
 }
 
